--- a/src/style.css
+++ b/src/style.css
@@ -9,13 +9,15 @@ header{
 
 /* bg-color class for stop dominant background */
 .bg-color{
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.8);
     width: 100%;
     height: 700px;
 }
-.top{
+nav{
     display: grid;
     grid-template-columns: 8fr 4fr;
+    
+    
 }
 .left-side{
     display: flex;
@@ -30,7 +32,7 @@ ul{
     list-style-type: none;
     margin-top: 9px;
     width: 770px;
-    padding-bottom: 153px;
+    padding-bottom: 30px;
     padding-top: 2px;
 }
 a{
@@ -105,3 +107,84 @@ a:hover {
     }
 
 }
+
+/* name-text */
+
+.name-text{
+    display: grid;
+    grid-template-columns: 7fr 5fr;
+    padding: 3px;
+}
+.name-heading{
+    padding-left: 15%;
+    margin-top: 13%;
+    color: white;
+}
+.name-heading p {
+    font-family: 'Inconsolata', monospace;
+    font-size: 1.8rem;
+}
+.name-heading h3{
+    font-family: 'Baloo Bhaina 2';
+    font-size: 2.5rem;
+    word-spacing: 0.3rem;
+    width: 80%;
+}
+.img{
+    padding-left: 15%;
+    margin-top: -5%;
+    padding-top: 0;
+    opacity: 0.9; 
+}
+
+/* about */
+.about{
+    background-color: #000000;
+    mix-blend-mode:darken;
+    color: white;
+    width: 100%;
+    height: 60%;
+    background-size: cover;
+   
+  
+}
+.intro-line{
+    display: grid;
+    grid-template-columns: 6fr 6fr;
+}
+
+.dp img{
+    width: 40%;
+    height: 70%;
+    margin-left: 35%;
+    margin-top: 10%;
+    border-radius: 4px;
+    opacity: 0.8;
+}
+.intro {
+    padding-left: 15%;
+    padding-top: 15%;
+    padding-right: 10%;
+    padding-bottom: 10%;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    word-spacing: 5px;
+}
+
+/* skills */
+ .skills{
+    margin-top: 10px;
+    margin-left: 15%;
+    margin-right: 15%;
+    
+    
+    
+ }
+ .skills-page{
+    background-color: gray;
+    padding: -5pxc;
+ }
+
+ summary{
+    font-weight: bold;
+    
+ }
