Some-edit and update

--- a/src/style.css
+++ b/src/style.css
@@ -3,10 +3,37 @@
 
 
 
-/* this header */
-
-@media screen and (orientation: landscape){
+/* width */
+::-webkit-scrollbar {
+  width: 0.7rem;
   
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: hsl(120, 75% 50% / 1);
+  border-radius: 100vw;
+  margin-block: 0.25em; 
+  
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background:linear-gradient(red,orange);
+  border-radius: 100vw;
+  border: 0.1em solid rgb(255, 248, 248);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background:hsl(120, 100% 5% / 1);
+  
+}
+
+/* ---------------------this header-------------------------- */ 
+body{
+  background-color: black;
+} 
 header{
   background: url(../Img/port-bg-1.jpg);
   width: 100%;
@@ -14,17 +41,20 @@ header{
   background-size: cover;
 }
 
-/* bg-color class for stop dominant background */
+/* ------------------bg-color class for stop dominant background-------------------- */
 .bg-color{
   background-color: rgba(0, 0, 0, 0.8);
   width: 100%;
   height: 100vh;
+  
 }
 nav{
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+  position: sticky;
+  top: 0px;
 
 }
 .container{
@@ -41,7 +71,7 @@ nav{
 nav ul li{
   display: inline-block;
   list-style: none;
-  margin: 10px 10px;
+  margin: 10px 15px;
   cursor: pointer;
   
 }
@@ -113,7 +143,7 @@ nav ul li a:hover::after{
 
 } 
 
-/* name-text */
+/* -----------------------name-text------------------------ */
 
 .header-text{
   margin-top: 20%;
@@ -138,21 +168,21 @@ nav ul li a:hover::after{
   display: grid;
   grid-template-columns: 6fr 6fr;
  
- 
-
-
 }
 
-/* about */
+/*------------------ about---------------------- */
 section{
-  background-color: #000000;
-  mix-blend-mode:darken;
+  /* background-color: #000000; */
+  /* mix-blend-mode:darken; */
   color: white;
-  width: 100%;
+  /* width: 100%;
   height: 100%;
-  background-size: cover;
+  background-size: cover; */
  
-
+}
+section h4{
+  padding-top: 75px;
+  font-size: 40px;
 }
 .about{
   color: white;
@@ -183,23 +213,60 @@ section{
   word-spacing: 5px;
 }
 
-/* skills */
+/* ----------------------skills--------------------- */
 
 .skills{
   display: grid;
   grid-template-columns: 6fr 6fr;
   padding: 0px;
 }
+.tab-titles{
+  display: flex;
+  margin: 20px 250px 40px;
+}
+.tab-links{
+  margin-right: 50px;
+  font-size: 18px;
+  font-weight: 500;
+  cursor: pointer;
+  position: relative;
+}
+.tab-links::after{
+  content: '';
+  width: 0;
+  height: 3px;
+  background-color: orange;
+  position: absolute;
+  left: 0;
+  bottom: -6px;
+  transition: 0.3s;
+}
+.tab-links.active-link::after{
+  width: 60%;
+  
+}
+.tab-contents{
+  display: none;
+}
+.tab-contents.active-tab{
+  display: block;
+}
+.tab-contents ul{
+  list-style: none;
+}
 
-.left-content .skills-bar {
-  padding-left: 100px;
-  padding-top: 20px;
+.tab-contents .skills-bar{
+  padding-left: 250px;
+  padding-top: 0px;
 }
-.right-content .skills-bar{
-  padding-left: 100px;
-  padding-top: 20px;
+.tab-contents li{
+  padding-left: 200px;
 }
-.skills-bar .bar {
+.tab-contents ul li span{
+  color: #D68910 ;
+  font-weight: bold;
+}
+.skills-bar .bar{
   margin: 25px 0;
 }
 
@@ -304,22 +371,20 @@ section{
 .progress-line .node::after , .express::after {
   content: "50%";
   
-}
+} 
 
-/* Service */
+/* -------------------------Service----------------------- */
 .service{
-  background-color: black;
+  /* background-color: black;
   width: 100%;
-  height: 400px;
-  padding: 40px 0px 0px 254px;
+  height: 400px; */
+  padding: 40px 0px 0px 310px;
 }
 
-
-
-.conteudo {
+.box{
   display: flex;
-  width: 300px;
-  height: 310px;
+  width: 280px;
+  height: 280px;
   column-gap: 40px;
   
 }
@@ -327,35 +392,121 @@ section{
 .card {
   flex: 0 0 100%;
  
-  /* padding: 10px; */
-  /* scroll-snap-align: start; */
-  /* border-radius: 15px; */
 }
 .card-text p {
   font-size: 17px;
   word-spacing: 5px;
-
   color: black;
   font-family: Arial, Helvetica, sans-serif;
 }
-.card h1 {
+.skills-heading h4 {
   margin-bottom: 2rem;
+  text-shadow: 2px 2px 2px 6px orange;
 }
 
 .card:nth-child(1) {
-  background: linear-gradient(-229deg, #00DBDE, #FC00FF);
+  background: linear-gradient(-229deg, #d1ba0e, #e2e2e2);
+  box-shadow: 0px 0px 6px white;
+  
+  
 }
 
 .card:nth-child(2) {
-  background: linear-gradient(-229deg, #0093E9, #80D0C7);
+  background: linear-gradient(-229deg, #a48b11, #2c8d82);
+  box-shadow: 0px 0px 6px white;
 }
 
 .card:nth-child(3) {
-  background: linear-gradient(-229deg, #50d990, #d4d054);
+  background: linear-gradient(-229deg, #e3c00f, #840808);
+  box-shadow: 0px 0px 6px white;
 }
 
-.card:nth-child(4) {
-  background: linear-gradient(-229deg, #D9AFD9, #97D9E1);
+/* ------------work------------- */
+.Work-Section{
+  padding: 40px 0px 0px 200px; 
+}
+.work-list{
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
+  grid-gap:40px;
+  margin-top: 10px;
+ 
+  
+}
+
+.work{
+  border-radius: 10px;
+  position: relative;
+  overflow: hidden;
+  
+ 
+}
+
+.work img{
+  width: 70%;
+  height: 73%;
+  border-radius: 10px;
+  display: block;
+  transition: transform 0.5s;
+}
+.layer{
+  width: 74%;
+  height: 0;
+  background: linear-gradient(rgba(0,0,0,0.5),#d2710a);
+  border-radius: 10px;
+  position: absolute;
+  left: 0;
+  bottom: 90px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 40px;
+  text-align: center;
+  font-size: 14px;
+  transition: height 0.5s;
+
+}
+.layer h3{
+  font-weight: 400;
+  margin-bottom: 10px;
+}
+.layer a{
+  margin-top: 10px;
+  color: green;
+  text-decoration: none;
+  line-height: 35px;
+  background-color: white;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  text-align: center;
+
+} 
+.work:hover img{
+  transform: scale(1.1);
+}
+.work:hover .layer{
+  height: 89%;
+}
+.btn-link{
+  display: block;
+  margin-bottom: 50px;
+  margin-top: 10px;
+  width: fit-content;
+  border: 1px solid white;
+  padding: 10px 30px;
+  margin-left: 500px;
+  border-radius: 6px;
+  text-decoration: none;
+  color: white;
+  transition: backrgound 0.5s;
+
+}
+.btn-link:hover{
+  background: darkred;
+  color: white;
 }
 
 
@@ -365,7 +516,23 @@ section{
 
 
 
-/* footer */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ---------------------------footer---------------------------- */
 footer{
   background-color: #1d293a;
   margin-top: 20px;
@@ -383,7 +550,6 @@ footer ul{
 }
 footer li{
   background-color: #111a28;
-  color: white;
   width: 100px;
   margin-right: 10px;
   height: 40px;
@@ -392,6 +558,8 @@ footer li{
 footer li p{
   border-radius: 3px;
   margin: 0;
+  color: white;
+  
  
 }
 footer a{
@@ -407,5 +575,4 @@ footer .progress{
   width: 100%;
   bottom: 0;
   border-radius: 4px;
-}
 }
