--- a/src/style.css
+++ b/src/style.css
@@ -38,16 +38,18 @@ header{
   background: url(../Img/port-bg-1.jpg);
   width: 100%;
   height: 700px;
+
   background-size: cover;
 }
 
 /* ------------------bg-color class for stop dominant background-------------------- */
-.bg-color{
+/* .bg-color{
   background-color: rgba(0, 0, 0, 0.8);
   width: 100%;
   height: 100vh;
   
-}
+  
+} */
 nav{
   display: flex;
   flex-wrap: wrap;
