--- a/src/style.css
+++ b/src/style.css
@@ -424,14 +424,22 @@ section h4{
   box-shadow: 0px 0px 6px white;
 }
 
-/* ------------work------------- */
+
+
+
+/* -----------------------------------work---------------------- */
 .Work-Section{
   padding: 40px 0px 0px 200px; 
 }
+.Work-Section .container{
+  padding-right:90px ;
+  
+}
+
 .work-list{
   display: grid;
-  grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
-  grid-gap:40px;
+  grid-template-columns: repeat(auto-fit,minmax(16rem,1fr));
+  grid-gap:15px;
   margin-top: 10px;
  
   
@@ -441,13 +449,14 @@ section h4{
   border-radius: 10px;
   position: relative;
   overflow: hidden;
+  margin-bottom: 10px;
   
  
 }
 
 .work img{
   width: 70%;
-  height: 73%;
+  height: 14rem;
   border-radius: 10px;
   display: block;
   transition: transform 0.5s;
@@ -459,7 +468,7 @@ section h4{
   border-radius: 10px;
   position: absolute;
   left: 0;
-  bottom: 90px;
+  bottom: 0px;
   overflow: hidden;
   display: flex;
   align-items: center;
@@ -491,16 +500,16 @@ section h4{
   transform: scale(1.1);
 }
 .work:hover .layer{
-  height: 89%;
+  height: 100%;
 }
 .btn-link{
   display: block;
   margin-bottom: 50px;
-  margin-top: 10px;
+  margin-top: 50px;
   width: fit-content;
   border: 1px solid white;
   padding: 10px 30px;
-  margin-left: 500px;
+  margin-left: 450px;
   border-radius: 6px;
   text-decoration: none;
   color: white;
@@ -512,37 +521,65 @@ section h4{
   color: white;
 }
 
+/* --------------Contact------------- */
 
+.contact-left{
+  flex-basis: 35%;
+}
+.contact-right{
+  flex-basis: 60%;
+}
+.contact-left p{
+  margin-bottom: 25px;
+}
+.contact-left p svg{
+  color: #EAEDED;
+}
+.social-icons a{
+  text-decoration: none;
+  color: #EAEDED;
+  display: inline-block;
+  transition: transform 0.5s;
+}
 
+.social-icons a:hover{
+  color: orange;
+  transform: translateY(-5px);
+}
 
+.contact-right form{
+  width: 100%;
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+}
+form input, form textarea{
+  width: 100%;
+  border: 0;
+  outline: none;
+  background-color: grey;
+  padding: 15px;
+  margin: 15px 0;
+  color: white;
+  font-size: 18px;
+  border-radius: 6px;
+}
+::placeholder{
+  color: white;
+}
+form button{
+  float: right;
+}
 
 
 /* ---------------------------footer---------------------------- */
 footer{
   background-color: #1d293a;
-  margin-top: 20px;
-  padding-top: 25px;
-  padding-left: 100px;
-  display: grid;
-  grid-template-columns: 8fr 4fr;
+  margin-top: 30px;
+  height: 20vh;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  
 }
 footer ul{
   text-decoration: none;
@@ -550,7 +587,9 @@ footer ul{
   text-transform: uppercase;
   font-weight: bold;
   list-style: none;
+  margin-top: 35px;
 }
+
 footer li{
   background-color: #111a28;
   width: 100px;
@@ -562,15 +601,13 @@ footer li p{
   border-radius: 3px;
   margin: 0;
   color: white;
-  
- 
+
 }
 footer a{
   text-decoration: none;
   cursor: pointer;
   
 }
-
 footer .progress{
   left: 0;
   background-color: orange;
@@ -578,4 +615,12 @@ footer .progress{
   width: 100%;
   bottom: 0;
   border-radius: 4px;
+}
+
+.copy p{
+  color: white;
+  margin-top: 20px;
+}
+.copy span{
+  font-size: 18px;
 }
