--- a/src/style.css
+++ b/src/style.css
@@ -42,14 +42,7 @@ header{
   background-size: cover;
 }
 
-/* ------------------bg-color class for stop dominant background-------------------- */
-/* .bg-color{
-  background-color: rgba(0, 0, 0, 0.8);
-  width: 100%;
-  height: 100vh;
-  
-  
-} */
+
 nav{
   display: flex;
   flex-wrap: wrap;
@@ -175,13 +168,7 @@ nav ul li a:hover::after{
 
 /*------------------ about---------------------- */
 section{
-  /* background-color: #000000; */
-  /* mix-blend-mode:darken; */
   color: white;
-  /* width: 100%;
-  height: 100%;
-  background-size: cover; */
- 
 }
 section h4{
   padding-top: 75px;
@@ -272,7 +259,11 @@ section h4{
 .skills-bar .bar{
   margin: 25px 0;
 }
-
+.Skill li{
+  color: lightyellow;
+  word-spacing: 3px;
+  text-shadow: 3px 3px 5px red;
+}
 .skills-bar .bar .info span {
   font-size: 1rem;
   font-weight: 500;
@@ -378,14 +369,14 @@ section h4{
 
 /* -------------------------Service----------------------- */
 .service{
-  /* background-color: black;
-  width: 100%;
-  height: 400px; */
-  padding: 40px 0px 0px 310px;
+ padding: 40px 0px 0px 310px;
 }
 
-.box{
+main{
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  
   width: 280px;
   height: 280px;
   column-gap: 40px;
@@ -532,20 +523,40 @@ section h4{
 .contact-left p{
   margin-bottom: 25px;
 }
-.contact-left p svg{
-  color: #EAEDED;
-}
+
 .social-icons a{
   text-decoration: none;
-  color: #EAEDED;
+  color: #686969;
   display: inline-block;
-  transition: transform 0.5s;
+  transition: transform 0.7s;
 }
 
 .social-icons a:hover{
   color: orange;
-  transform: translateY(-5px);
+  transform: translateY(-7px);
 }
+.contact-left a:nth-child(1):hover{
+color:#4267B2;
+transform: translateY(-7px);
+}
+.contact-left a:nth-child(2):hover{
+  color:#1DA1F2;
+  transform: translateY(7px);
+  }
+  .contact-left a:nth-child(3):hover{
+    color:rgb(251, 57, 88);
+    transform: translateY(-7px);
+    
+    }
+    .contact-left a:nth-child(4):hover{
+      color: #0A66C2;
+      transform: translateY(7px);
+    }
+    .contact-left a:nth-child(5):hover{
+      color: #075e54;
+      transform: translateY(-8px);
+    }
+  
 
 .contact-right form{
   width: 100%;
