--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&family=Inconsolata:wght@200&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&display=swap');
+
+
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap');
+
 
 
 
@@ -38,7 +41,6 @@ header{
   background: url(../Img/port-bg-1.jpg);
   width: 100%;
   height: 700px;
-
   background-size: cover;
 }
 
@@ -199,7 +201,7 @@ section h4{
   padding-top: 15%;
   padding-right: 10%;
   padding-bottom: 10%;
-  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: 'Josefin Sans', sans-serif;
   word-spacing: 5px;
 }
 
@@ -267,6 +269,7 @@ section h4{
 .skills-bar .bar .info span {
   font-size: 1rem;
   font-weight: 500;
+  font-family: 'Playfair Display', serif;
 }
 
 .skills-bar .bar .info {
@@ -368,23 +371,22 @@ section h4{
 } 
 
 /* -------------------------Service----------------------- */
-.service{
- padding: 40px 0px 0px 310px;
+
+#Service{
+  padding: 50px 0;
+}
+.service-list{
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+  grid-gap:30px;
+  margin-top: 30px;
+  margin-left: 150px;
 }
 
-.box{
-  display: flex;
-  
-  
+.card{
   width: 280px;
   height: 280px;
-  column-gap: 40px;
-  
-}
-
-.card {
   flex: 0 0 100%;
- 
 }
 .card-text p {
   font-size: 17px;
@@ -392,12 +394,13 @@ section h4{
   color: black;
   font-family: Arial, Helvetica, sans-serif;
 }
+
 .skills-heading h4 {
   margin-bottom: 2rem;
   text-shadow: 2px 2px 2px 6px orange;
 }
 
-.card:nth-child(1) {
+ .card:nth-child(1) {
   background: linear-gradient(-229deg, #d1ba0e, #e2e2e2);
   box-shadow: 0px 0px 6px white;
   
@@ -412,9 +415,7 @@ section h4{
 .card:nth-child(3) {
   background: linear-gradient(-229deg, #e3c00f, #840808);
   box-shadow: 0px 0px 6px white;
-}
-
-
+} 
 
 
 /* -----------------------------------work---------------------- */
@@ -450,6 +451,8 @@ section h4{
   border-radius: 10px;
   display: block;
   transition: transform 0.5s;
+ opacity: 0.6;
+  filter: blur(10%);
 }
 .layer{
   width: 74%;
@@ -488,9 +491,12 @@ section h4{
 } 
 .work:hover img{
   transform: scale(1.1);
+  opacity: 13;
+  
 }
 .work:hover .layer{
   height: 100%;
+  transition-delay: 300ms;
 }
 .btn-link{
   display: block;
@@ -630,7 +636,70 @@ footer .progress{
 .copy p{
   color: white;
   margin-top: 20px;
+  font-family: 'Josefin Sans', sans-serif;
 }
 .copy span{
   font-size: 18px;
+}
+nav svg{
+  display: none;
+}
+/* ---------css for small screen---------------- */
+@media only screen and (max-width:600px){
+  header{
+    background: url(../Img/Bg.jpg);
+    background-size: cover;
+    width: 600px;
+    height: 80vh;
+  }
+  .greeting{
+    display: none;
+  }
+  .logo{
+    margin-left: 2px;
+    width: 50px;
+    height: 7vh;
+    margin-top: -10px;
+  }
+  .header-text{
+    margin-top: 50%;
+    width: 400px;
+    letter-spacing: 0;
+    word-spacing: 0;
+    font-size: 16px;
+    margin-left: 10px;
+  }
+  .header-text h1{
+    font-size: 20px;
+    width: 240px;
+    margin-top: -10px;
+  }
+  nav svg{
+    display: block;
+    font-size: 25px;
+    color: white;
+  }
+  nav ul{
+    background-color: orange;
+    position: fixed;
+    top: 0;
+    right: -200;
+    width: 200px;
+    height: 100vh;
+    padding-top: 30px;
+    z-index: 2;
+    
+  }
+  nav ul li{
+    display: block;
+    margin: 25px;
+  
+   
+  }
+  nav ul svg{
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    cursor: pointer;
+  }
 }
