--- a/src/style.css
+++ b/src/style.css
@@ -660,6 +660,7 @@ nav svg{
     background: url(../Img/Bg.jpg);
     background-size: cover;
     width:100%;
+    height: 100vh;
      
   }
   nav ul li{
@@ -668,28 +669,6 @@ nav svg{
   .greeting{
     display: none;
   }
-  footer ul {
-    display: none;
-  }
-  footer{
-   background-color: #07374a;
-   height: 10vh;
-  }
-  footer .copy{
-    margin-left: 8%;
-  }
- footer #back-top svg{
-  font-size: 18px;
-  color:white ;
-  background-color: rgb(174, 70, 70);
- }
- footer svg:hover{
-  color: red;
-  background-color: black;
- }
-    
-  
-   
   
   .logo{
     margin-left: 2px;
@@ -825,13 +804,43 @@ nav svg{
   }
   .contact-right .btn{
     width: 90px;
-        padding: 5px;
+    padding: 5px;
     font-size: 16px;
   }
+  
   .scroll svg{
     display: block;
-    font-size: 25px;
     color: white;
+    position: sticky;
+    bottom: 150px;
+    left: 170px;
+    padding-bottom:15px;
   }
+  .scroll a svg:hover{
+      color: red;
+      
+  }
+
+  footer ul {
+    display: none;
+  }
+  footer{
+   background-color: #07374a;
+   height: 10vh;
+  }
+  footer .copy{
+    margin-left: 5%;
+    font-size: 16px;
+  }
+ footer #back-top svg{
+  font-size: 18px;
+  color:white ;
+  background-color: rgb(174, 70, 70);
+ }
+ footer svg:hover{
+  color: red;
+  background-color: black;
+ }
+   
 }
 
