--- a/src/style.css
+++ b/src/style.css
@@ -650,7 +650,7 @@ nav svg{
 }
 
 /* ---------css for small screen---------------- */
-@media only screen and (max-width: 600px){
+@media screen and (max-width: 600px){
   
   header{
     background: url(../Img/Bg.jpg);
