--- a/src/style.css
+++ b/src/style.css
@@ -41,7 +41,7 @@ header{
 }
 
 
-nav{
+ nav{
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -49,19 +49,20 @@ nav{
   position: sticky;
   top: 0px;
 
-}
-.container{
+} 
+/* .container{
   padding: 15px 0px;
-}
+}*/
 .logo{
   width:80px;
   height: 70px;
   opacity: 0.6;
-  margin-left: -60px;
   
-}
+  
+  
+} 
 
-nav ul li{
+ nav ul li{
   display: inline-block;
   list-style: none;
   margin: 10px 15px;
@@ -73,7 +74,7 @@ nav ul li a{
   color: rgb(157, 156, 156);
   font-size: 18px;
   position: relative;
-}
+} 
 
 nav ul li a::after{
   content: '';
@@ -227,7 +228,7 @@ section h4{
   position: absolute;
   left: 0;
   bottom: -6px;
-  transition: 0.3s;
+  transition: 0.2s;
 }
 .tab-links.active-link::after{
   width: 60%;
@@ -281,17 +282,17 @@ section h4{
   border-radius: 10px;
   transform: scaleY(0);
   transform-origin: left;
-  animation: animate 2s cubic-bezier(1, 0, 0.5, 1) forwards;
+  animation: animate 1s cubic-bezier(1, 0, 0.5, 1) forwards;
 }
 
 .bar .progress-line span {
   position: absolute;
-  background:linear-gradient(45deg, orange,  white 75%, rgb(9, 107, 48) 100%);
+  background:linear-gradient(45deg, orange,  rgb(156, 7, 48) 100%);
   height: 100%;
   border-radius: 10px;
   transform: scaleY(0);
   transform-origin: left;
-  animation: animate 2s 2s cubic-bezier(1, 0, 0.5, 1) forwards;
+  animation: animate 1s 1s cubic-bezier(1, 0, 0.5, 1) forwards;
 }
 
 @keyframes animate {
@@ -650,12 +651,16 @@ nav svg{
 }
 
 /* ---------css for small screen---------------- */
-@media screen and (max-width: 600px){
-  
+@media only screen and (orientation: portrait){
+  *{
+    padding: 0;
+    margin: 0;
+  }
   header{
     background: url(../Img/Bg.jpg);
-    background-size: cover;
-    width:100%;
+    background-size:cover;
+    width:100%
+    ;
     height: 100vh;
      
   }
@@ -670,7 +675,7 @@ nav svg{
     margin-left: 2px;
     width: 85px;
     height: 15vh;
-    margin-top: -10px;
+    margin-left: -10px;
   }
   
   .header-text{
@@ -689,10 +694,11 @@ nav svg{
    line-height: 30px;
  
   }
+ 
   section h4{
-    font-size: 20px;
+    font-size: 26px;
     color: rgb(224, 224, 224);
-    margin-right: 50px;
+    margin-right: 0px;
   }
   .dp img{
     width: 70%;
@@ -756,7 +762,7 @@ nav svg{
     margin-top: 20px;
   }
   #Service{
-    padding: 10px 10%;
+    padding: 10px 7%;
   }
   .Work-Section{
     padding: 10px 20%;
@@ -821,6 +827,7 @@ nav svg{
     display: none;
   }
   footer{
+    width: 100%;
    background-color: #07374a;
    height: 10vh;
   }
